# langchain-mcp-client

./: .gitignore  Dockerfile  LICENSE  MCP_IMPLEMENTATION_PLAN.md  README.md  app.py  conversations.db  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh  run_ads_mcp.py  run_ga_mcp.py  test_streaming.py  weather_server.py
src/: __init__.py  agent_manager.py  database.py  llm_providers.py  mcp_client.py  memory_tools.py  tab_components.py  ui_components.py  utils.py
