[project]
name = "langchain-mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.17.0",
    # Core LangChain packages - versions pinned for compatibility
    "langchain-anthropic==0.3.15",
    "langchain-core==0.3.65",
    "langchain-google-genai==2.1.5",
    "langchain-mcp-adapters==0.1.7",
    "langchain-ollama==0.3.3",
    "langchain-openai==0.2.14", # Must use 0.2.x with langchain-core 0.3.65
    "langgraph>=0.0.26",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "mcp>=0.0.3",
    "nest-asyncio>=1.6.0,<2.0.0",
    "ollama>=0.4.8",
    "streamlit==1.45.1",
    # Critical: jsonpointer required for JsonOutputParser in langchain-core
    "jsonpointer==3.0.0",
    "aiohttp>=3.12.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
